Imported Upstream version 8.1.10