@@ -1,15 +1,20 @@
-// ========================================================================
-// Copyright (c) 1997-2009 Mort Bay Consulting Pty. Ltd.
-// ------------------------------------------------------------------------
-// All rights reserved. This program and the accompanying materials
-// are made available under the terms of the Eclipse Public License v1.0
-// and Apache License v2.0 which accompanies this distribution.
-// The Eclipse Public License is available at 
-// http://www.eclipse.org/legal/epl-v10.html
-// The Apache License v2.0 is available at
-// http://www.opensource.org/licenses/apache2.0.php
-// You may elect to redistribute this code under either of these licenses. 
-// ========================================================================
+//
+//  ========================================================================
+//  Copyright (c) 1995-2013 Mort Bay Consulting Pty. Ltd.
+//  ------------------------------------------------------------------------
+//  All rights reserved. This program and the accompanying materials
+//  are made available under the terms of the Eclipse Public License v1.0
+//  and Apache License v2.0 which accompanies this distribution.
+//
+//      The Eclipse Public License is available at
+//      http://www.eclipse.org/legal/epl-v10.html
+//
+//      The Apache License v2.0 is available at
+//      http://www.opensource.org/licenses/apache2.0.php
+//
+//  You may elect to redistribute this code under either of these licenses.
+//  ========================================================================
+//
 
 package org.eclipse.jetty.util.resource;
 
@@ -24,10 +29,18 @@ import java.io.FilenameFilter;
 import java.io.InputStream;
 import java.net.URI;
 import java.net.URL;
+import java.sql.Time;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.TimeZone;
+import java.util.jar.JarFile;
+import java.util.zip.ZipFile;
 
+import junit.framework.Assert;
+
+import org.eclipse.jetty.toolchain.test.MavenTestingUtils;
 import org.eclipse.jetty.toolchain.test.OS;
 import org.eclipse.jetty.util.IO;
 import org.junit.BeforeClass;
@@ -114,15 +127,15 @@ public class ResourceTest
         file=new File(file.getCanonicalPath());
         URI uri = file.toURI();
         __userURL=uri.toURL();
-
-        __userURL = new URL(__userURL.toString() + "src/test/java/org/eclipse/jetty/util/resource/");
-        FilePermission perm = (FilePermission) __userURL.openConnection().getPermission();
-        __userDir = new File(perm.getName()).getCanonicalPath() + File.separatorChar;
-        __relDir = "src/test/java/org/eclipse/jetty/util/resource/".replace('/', File.separatorChar);  
-
-        System.err.println("User Dir="+__userDir);
-        System.err.println("Rel  Dir="+__relDir);
-        System.err.println("User URL="+__userURL);
+        
+        __userURL = MavenTestingUtils.getTestResourcesDir().toURI().toURL();
+	FilePermission perm = (FilePermission) __userURL.openConnection().getPermission();
+	__userDir = new File(perm.getName()).getCanonicalPath() + File.separatorChar;
+	__relDir = "src/test/resources/".replace('/', File.separatorChar);  
+        
+        //System.err.println("User Dir="+__userDir);
+        //System.err.println("Rel  Dir="+__relDir);
+        //System.err.println("User URL="+__userURL);
 
         tmpFile=File.createTempFile("test",null).getCanonicalFile();
         tmpFile.deleteOnExit();
@@ -136,15 +149,15 @@ public class ResourceTest
         data[i++]=new Data(__userURL,EXISTS,DIR);
         data[i++]=new Data(__userDir,EXISTS,DIR);
         data[i++]=new Data(__relDir,EXISTS,DIR);
-        data[i++]=new Data(__userURL+"ResourceTest.java",EXISTS,!DIR);
-        data[i++]=new Data(__userDir+"ResourceTest.java",EXISTS,!DIR);
-        data[i++]=new Data(__relDir+"ResourceTest.java",EXISTS,!DIR);
+        data[i++]=new Data(__userURL+"jetty-logging.properties",EXISTS,!DIR);
+        data[i++]=new Data(__userDir+"jetty-logging.properties",EXISTS,!DIR);
+        data[i++]=new Data(__relDir+"jetty-logging.properties",EXISTS,!DIR);
         data[i++]=new Data(__userURL+"NoName.txt",!EXISTS,!DIR);
         data[i++]=new Data(__userDir+"NoName.txt",!EXISTS,!DIR);
         data[i++]=new Data(__relDir+"NoName.txt",!EXISTS,!DIR);
 
-        data[i++]=new Data(data[rt],"ResourceTest.java",EXISTS,!DIR);
-        data[i++]=new Data(data[rt],"/ResourceTest.java",EXISTS,!DIR);
+        data[i++]=new Data(data[rt],"jetty-logging.properties",EXISTS,!DIR);
+        data[i++]=new Data(data[rt],"/jetty-logging.properties",EXISTS,!DIR);
         data[i++]=new Data(data[rt],"NoName.txt",!EXISTS,!DIR);
         data[i++]=new Data(data[rt],"/NoName.txt",!EXISTS,!DIR);
         
@@ -310,6 +323,21 @@ public class ResourceTest
         assertFalse(jarFileResource.isContainedIn(container));
     }
 
+    /* ------------------------------------------------------------ */
+    @Test
+    public void testJarFileLastModified ()
+    throws Exception
+    {
+        String s = "jar:"+__userURL+"TestData/test.zip!/subdir/numbers";
+        
+        ZipFile zf = new ZipFile(MavenTestingUtils.getTestResourceFile("TestData/test.zip"));
+        
+        long last = zf.getEntry("subdir/numbers").getTime();
+        
+        Resource r = Resource.newResource(s);
+        assertEquals(last,r.lastModified()); // Known date value inside zip
+    }
+    
     /* ------------------------------------------------------------ */
     @Test
     public void testJarFileCopyToDirectoryTraversal () throws Exception
